# projet-monopoly-ing1

./: .gitignore  CMakeLists.txt  README.md  main.c  poubelle.c
.github/: release-drafter.yml
.github/workflows/: build_release.yml  publish-release.yml
Animations/: animations.c  animations.h
Bitmaps/: bitmaps.c  bitmaps.h
BoucleTout/: boucleTout.c  boucleTout.h
Classes/: classes.c  classes.h
Fichiers/: fichiers.c  fichiers.h
FinDeGame/AnnonceVainqueur/: AnnoncesVainqueurs.c  AnnoncesVainqueurs.h
FinDeGame/Statistiques/: Statistiques.c  Statistiques.h
Fonctions/Cartes/: cartes.c  cartes.h
Fonctions/De/: de.c  de.h
Fonctions/Hypotheque/: hypotheque.c  hypotheque.h
Fonctions/Immobilier/: immobilier.c  immobilier.h
Fonctions/Joueur/: Joueur.c  Joueur.h
Fonctions/Menu/: menu.c  menu.h
Fonctions/Monnaie/: monnaie.c  monnaie.h
Fonctions/Partie/: partie.c  partie.h
Fonctions/Plateau/: plateau.c  plateau.h
Fonctions/Prison/: Prison.c  Prison.h
Fonctions/Sauvegarde/: sauvegarde.c  sauvegarde.h
Joueurs/: Joueurs.c  Joueurs.h
Map/: map.c  map.h
Pages/ChoixNom/: choixNom.c  choixNom.h
Pages/MenuPrincipal/: menuPrincipal.c  menuPrincipal.h
Pages/PageAide/: pageAide.c  pageAide.h
Pages/PageMenuInGame/: pageMenuInGame.c  pageMenuInGame.h
Pages/PagePlacementLibre/: pagePlacementLibre.c  pagePlacementLibre.h
Pages/SelectionClasse/: selectionClasse.c  selectionClasse.h
Pages/SelectionNombreJoueur/: selectionNombreJoueur.c  selectionNombreJoueur.h
Sorts/: sorts.c  sorts.h
Structures/: Structures.h  structures.c  structures.h
(+8 files in other folders)
